@startuml class

skinparam classAttributeIconSize 0

class User {
  #id: int
  #nom: string
  #email: string
  #motDePasse: string
  +register()
  +login()
  +logout()
}

class volunteer {
  -participatioHistory: list
  +achievementSation()
}

class Organization {
  -publishedOpportunities: list
  +OpportunityManagement()
}

class Admin {
  +Usermanagement()
  +superviserOpportunitys()
  +analyserStatistics()
  +contentModeration()
}

class Opportunity {
  -id: int
  -titre: string
  -description: string
  -localisation: string
  -durée: string
  +createOpportunity()
  +editOpportunity()
  +deleteOpportunity()
}

class Candidature {
  -id: int
  -statut: string
  -dateSoumission: date
  +postuler()
  +accept()
  +refuse()
}

class Statistics {
  -nombrevolunteers: int
  -nombreOpportunitys: int
  +generateRapport()
}

class Message {
  -id: int
  -contenu: string
  +sendMessage()
}

class Donation {
  -id: int
  -description: string
  -état: string
  +postDonation()
  +editDonation()
  +deleteDonation()
}

User  <|--  volunteer
User <|-- Organization
User <|-- Admin
User " 1 " --> " * "  Message 

volunteer " 1"  --* " *   " Donation 
volunteer " 1 " --> " * " Candidature
volunteer " 1    " --> " * " Opportunity 

Organization " 1 "--> "  * " Opportunity
Organization --> Statistics 
Organization " 1   "  --* " *  " Donation 

Admin --> Statistics  
Admin --> Opportunity 

Candidature " 1  " --> " 1  " Opportunity

@enduml